Ajustes finais no front-end

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <select id="tipo">
       <option value="nome">Nome</option>
       <option value="genero">Genero</option>
-      <option value="nota">Nota minima</option>
+      <option value="nota">Nota</option>
       <option value="ano">Ano de lancamento</option>
     </select>
 
